(Fix) adds overflow instructions for user table

--- a/frontend/src/app/components/admin-panel-users/admin-panel-users.component.scss
+++ b/frontend/src/app/components/admin-panel-users/admin-panel-users.component.scss
@@ -39,24 +39,6 @@ mat-form-field {
   }
 }
 
-//button {
-//  //display: block;
-//  //margin: 20px auto;
-//  border: 1px solid $custom_gray_medium;
-//  width: 150px;
-//  font-size: medium;
-//  font-weight: $custom_font_weight_light;
-//
-//  //color: $custom_gray_dark;
-//
-//  //background-color: $custom_gray_medium;
-//
-//  &:hover {
-//    color: $custom_gray_light;
-//    background-color: $custom_blue;
-//  }
-//}
-
 button {
   padding: 8px;
   margin: 10px;
@@ -99,6 +81,26 @@ button {
 }
 
 .admin-panel__user-table {
+  max-width: 100%;
+
+  .admin-panel__user-table__cell {
+    max-width: 220px; /* Adjust the value to your desired maximum width */
+    //overflow: auto;
+    //text-overflow: ellipsis;
+    //
+    .admin-panel__user-table__cell-content {
+      overflow: auto;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      scrollbar-width: thin; /*Firefox*/
+      scrollbar-color: #888 #f5f5f5;
+      height: 100%;
+    }
+    .admin-panel__user-table__cell-content::-webkit-scrollbar {
+      width: 10px; /* Adjust the width as needed */
+      background-color: #f5f5f5; /* Set the background color of the scrollbar track */
+    }
+  }
 
   .admin-panel__user-table__action-buttons {
     text-align: center;
